--- a/.env.sample
+++ b/.env.sample
@@ -10,7 +10,14 @@ DEFAULT_SSH_USER="root"
 SNAPSHOT_PREFIX="backup"
 MAX_SNAPSHOTS=5
 
+# Debug mode (set to true for additional output)
+DEBUG_MODE=false
+
 # Advanced options
 USE_COMPRESSION=true
 VERIFY_TRANSFERS=false
 RESUME_SUPPORT=true
+
+# Timeout settings (in seconds)
+SSH_TIMEOUT=10
+CMD_TIMEOUT=3600
