feat: Implement foundation phase components
Includes project structure, venv, gitignore, basic ZFS/Sanoid interfaces, config manager, and core app structure.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-dotenv
-rich
-prompt_toolkit
-textual
+# Core dependencies
+toml
+# Add other dependencies here as needed (e.g., textual, paramiko, apscheduler)
